added logic code
